--- a/ezGroceriesShoppingList/pom.xml
+++ b/ezGroceriesShoppingList/pom.xml
@@ -14,7 +14,8 @@
     <name>ezGroceriesShoppingList</name>
     <description>ezGroceriesShoppingList</description>
     <properties>
-        <java.version>19</java.version>
+        <java.version>17</java.version>
+        <spring-security.version>5.8.0</spring-security.version>
     </properties>
 
     <dependencyManagement>
@@ -46,6 +47,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
@@ -126,6 +132,11 @@
         <dependency>
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-okhttp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
